# codebatcher

./: .cbatchignore  .gitignore  README.md  cbatch.ini  cbatch.py  codebatch.md  cool.py  pyproject.toml
codebatcher/: cbatch.py
routes/: example.py
